[package]
name = "crud-derive"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = [ "runtime-tokio-native-tls", "postgres", "macros" ] }
syn = { version = "2.0", features = ["full"] }
quote = { version = "1.0" }
proc-macro2 = "1.0"
Inflector = "0.11.4"
regex = "1.8"