[package]
name = "crud-derive"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = [
  "runtime-tokio-native-tls",
  "postgres",
  "macros",
] }
syn = { version = "2.0", features = ["full"] }
quote = { version = "1.0" }
proc-macro2 = "1.0"
Inflector = "0.11.4"
regex = "1.8"
rust-i18n = "2.2"


[package.metadata.i18n]
# The available locales for your application, default: ["en"].
available-locales = ["en", "zh-CN"]

# The default locale, default: "en".
default-locale = "en"

# Path for your translations YAML file, default: "locales".
# This config for let `cargo i18n` command line tool know where to find your translations.
# You must keep this path same as the one you pass to method `rust_i18n::i18n!`.
load-path = "locales"
